--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -186,17 +186,26 @@ year = {1959}
 }
 
 @misc{reduction,
-  howpublished = "\url{https://github.com/alexanderskulikov/circuit-synthesis}"
+  howpublished = "\url{https://github.com/alexanderskulikov/circuit-synthesis}",
+  key="reduction"
 }
 
 @misc{abc,
-  howpublished = "\url{https://github.com/berkeley-abc/abc}"
+  howpublished = "\url{https://github.com/berkeley-abc/abc}",
+  key="abc"
 }
 
 @misc{pycosat,
-  howpublished = "\url{https://pypi.org/project/pycosat/}"
+  howpublished = "\url{https://pypi.org/project/pycosat/}",
+  key="pycosat"
 }
 
 @misc{knuthreduction,
-  howpublished = "\url{http://www-cs-faculty.stanford.edu/~knuth/programs.html}"
+  howpublished = "\url{http://www-cs-faculty.stanford.edu/~knuth/programs.html}",
+  key="knuth"
+}
+
+@misc{git-improvement,
+  howpublished = "\url{https://github.com/alexanderskulikov/circuit_improvement}",
+  key="circuit"
 }
