--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -1,79 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {\n",
-    "    \"id\": \"MR3F-woo5a0C\"\n",
-    "   },\n",
-    "   \"source\": [\n",
-    "    \"If you are new to Python notebooks, we encourage you to go through an overview at, for example, [Google Colab](https://colab.research.google.com/notebooks/basic_features_overview.ipynb).\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {\n",
-    "    \"id\": \"j_oyfECK5a0H\"\n",
-    "   },\n",
-    "   \"source\": [\n",
-    "    \"## Table of Contents\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {\n",
-    "    \"id\": \"ljO6lahB5a0H\"\n",
-    "   },\n",
-    "   \"source\": [\n",
-    "    \"[Mod3 functions checker](mod3_check.ipynb)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"[Circuit sandbox](sat.ipynb)\\n\"\n",
-    "   ]\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {\n",
-    "  \"colab\": {\n",
-    "   \"collapsed_sections\": [],\n",
-    "   \"name\": \"index.ipynb\",\n",
-    "   \"provenance\": []\n",
-    "  },\n",
-    "  \"kernelspec\": {\n",
-    "   \"display_name\": \"Python 3\",\n",
-    "   \"language\": \"python\",\n",
-    "   \"name\": \"python3\"\n",
-    "  },\n",
-    "  \"language_info\": {\n",
-    "   \"codemirror_mode\": {\n",
-    "    \"name\": \"ipython\",\n",
-    "    \"version\": 3\n",
-    "   },\n",
-    "   \"file_extension\": \".py\",\n",
-    "   \"mimetype\": \"text/x-python\",\n",
-    "   \"name\": \"python\",\n",
-    "   \"nbconvert_exporter\": \"python\",\n",
-    "   \"pygments_lexer\": \"ipython3\",\n",
-    "   \"version\": \"3.7.9\"\n",
-    "  }\n",
-    " },\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 1\n",
-    "}"
-   ],
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "id": "MR3F-woo5a0C"
+   },
+   "source": [
+    "If you are new to Python notebooks, we encourage you to go through an overview at, for example, [Google Colab](https://colab.research.google.com/notebooks/basic_features_overview.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "j_oyfECK5a0H"
+   },
+   "source": [
+    "## Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ljO6lahB5a0H"
+   },
+   "source": [
+    "[Mod3 functions checker](mod3_check.ipynb)\n",
+    "\n",
+    "[Circuit sandbox](sat.ipynb)\n"
+   ]
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "index.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -82,16 +44,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
