Extend the part on experimental evaluation of SUM circuits

--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,58 @@
+@inproceedings{DBLP:conf/date/Kulikov18,
+  author    = {Alexander S. Kulikov},
+  editor    = {Jan Madsen and
+               Ayse K. Coskun},
+  title     = {Improving circuit size upper bounds using SAT-solvers},
+  booktitle = {2018 Design, Automation {\&} Test in Europe Conference {\&}
+               Exhibition, {DATE} 2018, Dresden, Germany, March 19-23, 2018},
+  pages     = {305--308},
+  publisher = {{IEEE}},
+  year      = {2018},
+  url       = {https://doi.org/10.23919/DATE.2018.8342026},
+  doi       = {10.23919/DATE.2018.8342026},
+  timestamp = {Wed, 16 Oct 2019 14:14:53 +0200},
+  biburl    = {https://dblp.org/rec/conf/date/Kulikov18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{EPFLLibraries,
+  author = {Soeken, Mathias and
+            Riener, Heinz and
+            Haaswijk, Winston and
+            Testa, Eleonora and
+            Schmitt, Bruno and
+            Meuli, Giulia and
+            Mozafari, Fereshte and
+            De Micheli, Giovanni},
+  title = {The {EPFL} logic synthesis libraries},
+  archivePrefix = "arXiv", 
+  note = {arXiv:1805.05121v2},
+  year = 2019,
+  month = nov
+}
+
+@inproceedings{DBLP:conf/cade/BrakensiekHMN20,
+  author    = {Joshua Brakensiek and
+               Marijn Heule and
+               John Mackey and
+               David Narv{\'{a}}ez},
+  editor    = {Nicolas Peltier and
+               Viorica Sofronie{-}Stokkermans},
+  title     = {The Resolution of Keller's Conjecture},
+  booktitle = {Automated Reasoning - 10th International Joint Conference, {IJCAR}
+               2020, Paris, France, July 1-4, 2020, Proceedings, Part {I}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12166},
+  pages     = {48--65},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-51074-9\_4},
+  doi       = {10.1007/978-3-030-51074-9\_4},
+  timestamp = {Fri, 03 Jul 2020 13:41:25 +0200},
+  biburl    = {https://dblp.org/rec/conf/cade/BrakensiekHMN20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/jsat/Biere08,
   author    = {Armin Biere},
   title     = {Pico{SAT} Essentials},
