--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -1,9 +1,9 @@
 %%%%% TIKZ GRAPHICS
 \usepackage{tikz}
-\usepackage{pgffor}
+%\usepackage{pgffor}
 
 \tikzstyle{input}=[draw=none, inner sep=.2mm]
-\tikzstyle{gate}=[draw, circle, inner sep=.2mm, minimum size=5mm]
+\tikzstyle{gate}=[draw, circle, inner sep=.2mm, minimum size=4mm]
 \tikzstyle{l}=[draw=none, rectangle, fill=white, inner sep=.4mm]
 
 \newenvironment{mypic}{
@@ -17,7 +17,7 @@
 
 %%%%% PACKAGES
 \usepackage{booktabs}
-\usepackage[color=red!5]{todonotes}
+\usepackage[color=red!5,colorinlistoftodos]{todonotes}
 \usepackage{url}
 \usepackage{booktabs}
 
@@ -34,5 +34,6 @@
 \DeclareMathOperator{\IN}{IN}
 \DeclareMathOperator{\MID}{MID}
 \DeclareMathOperator{\OUT}{OUT}
+\DeclareMathOperator{\MDFA}{MDFA}
 
 
