--- a/paper/body.tex
+++ b/paper/body.tex
@@ -7,9 +7,9 @@ problem in practice. Whereas modern computers
 and optimization techniques allow to~find a~circuit 
 of~size seven in~blink of an~eye, it~may take more 
 than a~week to~search for a~circuit of~size thirteen.
-One of the reasons of this behavior is that the search 
-space is~enormous: the number of circuits of size~$s$ 
-is~$s^{\Theta(s)}$, the number of Boolean functions on~$n$ variables is~$2^{2^n}$.
+One of the reasons of~this behavior is~that the search 
+space is~enormous: the number of~circuits of size~$s$ 
+is~$s^{\Theta(s)}$, the number of~Boolean functions on~$n$ variables is~$2^{2^n}$.
 
 In~this paper, we~explore the following natural
 heuristic idea for decreasing the size of
@@ -23,6 +23,8 @@ We~report the results of experiments with various symmetric functions.
 \end{abstract}
 
 \tableofcontents
+\clearpage
+\listoftodos
 
 
 
@@ -64,7 +66,7 @@ def sum2(x1, x2):
 \end{minted}
 \end{minipage}
 \begin{minipage}{.18\textwidth}
-\begin{tikzpicture}[label distance=-.9mm]
+\begin{tikzpicture}[label distance=-.9mm,scale=.9]
 \foreach \n/\x/\y in {1/0/1, 2/1/1}
   \node[input] (x\n) at (\x, \y) {$x_{\n}$};
 \node[gate, label=left:$w_1$] (g1) at (0,0) {$\land$};
@@ -86,7 +88,7 @@ def sum3(x1, x2, x3):
 \end{minipage}
 \begin{minipage}{.18\textwidth}
 ~
-\begin{tikzpicture}[label distance=-.9mm]
+\begin{tikzpicture}[label distance=-.9mm,scale=.9]
 \foreach \n/\x/\y in {1/0/3, 2/1/3, 3/2/3}
   \node[input] (x\n) at (\x, \y) {$x_{\n}$};
 \node[gate,label=left:$a$] (g1) at (0.5,2) {$\oplus$};
@@ -125,17 +127,33 @@ one needs to~prove that \emph{every} circuit
 of~size at~most~$\alpha$ does not compute~$f$.
 Known lower bounds are far from being satisfactory:
 the strongest known lower bound for a~function family
-in~NP is~$(3+1/86)n-o(n)$~\cite{}. But even proving
-lower bounds for specific functions (rather than function families) is difficult. 
-\todo[inline]{tell how Knuth enumerated circuits of four and five variables}
-A~natural approach is to~translate a~statement ``there exists a~circuit of size~$11$ computing $\SUM_5$'' into conjunctive normal form formula and feed this formula
-to a~SAT-solver. The state-of-the-art SAT-solvers are surprisingly efficient and allow to~handle
-various practically important problems (with millions
-of~variables) and even help to~resolve some open
-problems~\cite{}. Such SAT-based circuit synthesis approach was proposed 
+in~NP is~$(3+1/86)n-o(n)$~\cite{DBLP:conf/focs/FindGHK16}.
+Here, by a~\emph{function family} we mean an~infinite sequence of~functions $\{f_n\}_{n=1}^{\infty}$ where $f_n \in B_n$. 
+
+Even proving lower bounds for specific functions (rather than function families) is~difficult. Brute force approaches become impractical quickly: $|B_n|=2^{2^n}$, hence already for $n=6$, one cannot just enumerate all 
+functions from~$B_n$; also, the number of~circuits of size~$s$, hence checking all circuits of size~$s$ takes reasonable time for small values of~$s$ only.
+Knuth~\cite{Knuth:2008:ACP:1377542} found the exact circuit size of all functions from~$B_4$ and~$B_5$.
+
+Finding the exact value of $\size(f)$ for $f \in B_6$
+is~already a~difficult computational task for modern
+computers and techniques. One approach 
+is~to~translate a~statement ``there exists a~circuit 
+of~size~$s$ computing`$s$'' to a~Boolean formula and 
+to~pass~it to~a~SAT-solver. Then, if the formula 
+is~satisfiable, one decodes a~circuit from its satisfying 
+assignment; otherwise, one gets a~(computer generated) proof of a~lower bound $\size(f) > s$. This circuit synthesis approach was proposed 
 by~Kojevnikov et al.~\cite{DBLP:conf/sat/KojevnikovKY09}
-and, since then, has been used in various circuit synthesis programs~\cite{}. We demonstrate the limits
-of this approach on \emph{counting} functions:
+and, since then, has been used in various circuit synthesis programs (\texttt{abc}~\cite{abc}, \texttt{mockturtle}~\cite{EPFLLibraries}, \texttt{sat-chains}~\cite{knuthreduction}).
+
+The state-of-the-art SAT-solvers are surprisingly efficient and allow to~handle
+various practically important problems (with millions
+of~variables) and even help to~resolve open
+problems~\cite{DBLP:conf/cade/BrakensiekHMN20}.
+Still, already for small values of $n$~and~$s$ the problem
+of~finding a~circuit of~size~$s$ for a~function from~$B_n$
+is~difficult for SAT-solvers.
+We demonstrate the limits
+of~this approach on~\emph{counting} functions:
 \[\MOD_n^{m,r}=[x_1+\dotsb+x_n \equiv r \bmod m]\]
 (here, $[\cdot]$ is the Iverson bracket: $[S]$~is equal to~$1$ if $S$~is true and is equal to~$0$ otherwise).
 Using SAT-solvers, Knuth~\cite[solution to exercise~$480$]{Knuth:2015:ACP:2898950}
@@ -147,33 +165,27 @@ He was also able to find the circuit size
 for the $n=6,r=0$ case and wrote: ``The case $n=6$ and $r \neq 0$, which lies tantalizingly close to the limits of 
 today's solvers, is still unknown.'' 
 
-To~summarize, our current abilities for checking whether there exists a~Boolean circuit of size~$s$ are roughly the following: 
+To~summarize, our current abilities for checking whether there exists a~Boolean circuit of~size~$s$ are roughly the following: 
 \begin{itemize}
-\item for $s \le 6$, this can be done in a~few seconds;
+\item for $s \le 6$, this can be~done in a~few seconds;
 \item for $7 \le s \le 12$, this can (sometimes) 
 be~done in a~few days;
-\item for $s \ge 13$, this is out of~reach.
+\item for $s \ge 13$, this is~out of~reach.
 \end{itemize}
 
 In this paper, we explore the limits of the following natural idea: given a~circuit, try to~reduce its size by~reducing (using SAT-solvers, for example) the size 
-of~its subcircuit of size seven. This is a~kind of a~local search approach: we~have no~possibility to~go through the whole space of all circuits, but we can at~least
+of~its subcircuit of~size seven. This is a~kind of a~local search approach: we~have no~possibility to~go through the whole space of all circuits, but we can at~least
 search in a~neighborhood of a~given circuit. 
 This allows~us to~work with circuits consisting
 of many gates. 
 
 As the results of experiments, we show several circuits
-for which the approach described above leads to improved upper bounds. In particular, we support Knuth's conjecture~\eqref{conjecture} by~proving the matching upper bound. We also present improvements for $\size(\SUM_n)$ for various small~$n$. 
-Finally, we provide examples of circuits that are
-optimal locally, but not globally: our program is not able to find a~(known) smaller circuit since it is 
+for which the approach described above leads to improved upper bounds. In particular, we support Knuth's conjecture~\eqref{conjecture} by~proving the matching upper bound. 
+Also, we~present improvements for $\size(\SUM_n)$ for various small~$n$. 
+Finally, we provide examples of~circuits that are
+optimal locally, but not globally: our program is not able to find a~(known) smaller circuit since 
+it~is 
 ``too different'' from the original circuit.
-
-
-
-\todo[inline]{mention that we are interested in function families}
-
-
-
-
 
 \section{Program Overview}
 The program is~implemented in~\texttt{Python}.
@@ -184,6 +196,8 @@ One may run~it after installing a~few \texttt{Python} modules. Alternatively, on
 \texttt{tutorial.ipynb} in~the cloud without installing 
 anything. To~do this, press the badge ``Colab'' 
 at~\cite{git-improvement}.
+
+\todo[inline]{Nikita, prepare two tutorial files}
 
 \subsection{Manipulating Circuits}
 This is done through the \mintinline{python}{Circuit}
@@ -213,6 +227,7 @@ circuit.draw('sum5.png')
 
 \begin{figure}[t]
 \begin{mypic}
+\begin{scope}[scale=.9]
 %\draw[help lines] (0,-5) grid (16,6);
 \begin{scope}[yshift=-10mm]
 \foreach \n in {1,...,5}
@@ -288,6 +303,7 @@ circuit.draw('sum5.png')
 
 \foreach \x/\n in {3/a, 9/b, 14/c}
   \node at (\x,-3) {(\n)};
+\end{scope}
 \end{mypic}
 \caption{(a)~A~schematic circuit for $\SUM_5$ composed out of two full adders and one half adder. (b)~The corresponding circuit of size~$12$. (c)~An~improved circuit of size~$11$.}
 \label{figure:sumfive}
@@ -305,21 +321,20 @@ def sum_n(x):
     s, l = sum(x), ceil(log2(len(x) + 1))
     return [(s >> i) & 1 for i in range(l)]
 
-circuit = find_circuit(dimension=3, number_of_gates=5,
-                       function=sum_n)
-print(circuit)
+circuit = find_circuit(dimension=3, number_of_gates=5, function=sum_n)
+circuit.draw('sum3.png')
 \end{minted}
 
 This is~done by~encoding the task as~a~CNF formula
 and invoking the PicoSAT solver~\cite{DBLP:journals/jsat/Biere08} (via the \texttt{pycosat} module~\cite{pycosat}). The reduction to~SAT is~described 
-in~\cite{DBLP:conf/sat/KojevnikovKY09}. It~is used
-in~various programs for circuit synthesis~\cite{reduction, abc}.\todo{more links}
+in~\cite{DBLP:conf/sat/KojevnikovKY09}. 
 
-As~mentioned in the introduction, the limits 
-of~applicability of~this approach (for finding a~circuit of size~$s$) are roughly the following:
-for $s \le 6$, it usually works in less than a~minute;
-for $7 \le s \le 12$, it may already take up~to 
-several hours or days; for $s \ge 13$, it becomes almost impractical. The running time may vary a~lot
+As~mentioned in~the introduction, the limits 
+of~applicability of~this approach (for finding a~circuit 
+of~size~$s$) are roughly the following:
+for $s \le 6$, it~usually works in~less than a~minute;
+for $7 \le s \le 12$, it~may already take up~to 
+several hours or days; for $s \ge 13$, it~becomes almost impractical. The running time may vary a~lot
 for inputs of the same length. In~particular,
 it usually takes much longer to~prove that 
 the required circuit does not exist (by~proving that the corresponding formula is~unsatisfiable).
@@ -350,7 +365,7 @@ from~$B_n$, one needs
 to~write down its truth table of length~$2^n$; symmetric functions allow for more compact representation: it is enough to specify $n+1$ bits (for each of $n+1$ values 
 of~$\sum_{i=1}^nx_i$);
 \item circuit complexity of almost all functions 
-of~$n$ variables is exponential ($\Theta(2^n/n)$), whereas any symmetric function can~be computed by a~linear size circuit ($\Theta(n)$). 
+of~$n$ variables is exponential ($\Theta(2^n/n)$), whereas any symmetric function can~be computed by a~linear size circuit ($O(n)$). 
 \end{itemize}
 Despite simplicity of~symmetric functions, we still do~not
 know how optimal circuits look like for most of~them. Below, we~present new circuits for some of these functions.
@@ -361,20 +376,180 @@ a~symmetric function~$f \in B_n$ implies a~lower bound $\size(\SUM_n) \le \alpha
 \[2.5n-O(1) \le \size(\SUM_n) \le 4.5n+o(n) \, .\]
 The lower bound is~due to~Stockmeyer~\cite{DBLP:journals/mst/Stockmeyer77}, the upper bound is~due to~Demenkov et al.~\cite{DBLP:journals/ipl/DemenkovKKY10}.
 
-A~circuit for $\SUM_n$ can~be constructed from circuits for $\SUM_k$ for some small~$k$. Say, one can compute
+A~circuit for $\SUM_n$ can~be constructed from circuits for $\SUM_k$ for some small~$k$. For example, 
+using full and half adders as~building blocks, one can compute $\SUM_n$ (for any~$n$) by a~circuit of size $5n$ as~follows. Start from $n$~bits $(x_1, \dotsc, x_n)$ of~weight~$0$. While there are three bits of the same weight~$k$, replace them by~two bits of weights~$k$ and~$k+1$ using a~full adder. This way, one gets at~most two bits of~each weight $0,1,\dotsc,l-1$ ($l=\lceil \log_2(n+1)\rceil$) in at most $5(n-l)$ gates (as each full adder reduces the number of~bits). To~leave exactly one bit 
+of~each weight, it suffices to use at~most~$l$ half 
+or~full adders ($o(n)$ gates). Let~us denote the
+size of the resulting circuit by~$s(n)$. The second row
+of~Table~\ref{table:sum} shows the values of~$s(n)$ for 
+some $n \le 15$ (see~(28) in~\cite{Knuth:2008:ACP:1377542}).
+
+\begin{table}
+\begin{center}
+\begin{tabular}{lrrrrrrrrrrrrrrrrrrrrrr}
+\toprule
+$n$ & $2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $8$ & $9$ & $10$ & $15$
+\\
+\midrule
+$s(n)$ &$2$ & $5$ & $9$ & $12$ & $17$ & $20$ & $26$ & $29$& $34$& 
+%$37$ & $44$ & $47$ & $52$ & 
+$55$
+\\
+$\size(\SUM_n)$ & $2$ & $5$ & $9$ & $11$
+& $\le 16$ & $\le 19$ & $\le 25$ & $\le 27$
+& $\le 32$ & $\le 53$
+\\
+\bottomrule    
+\end{tabular}
+\end{center}
+\caption{The first line shows the value of~$n$. The second line gives the size $s(n)$ of~a~circuit for $\SUM_n$
+composed out~of half and full adders. The third row shows known bounds for $\size(\SUM_n)$.}
+\label{table:sum}
+\end{table}
+
+In a~similar fashion, one can get an~upper bound (see Theorem~1 in~\cite{DBLP:conf/date/Kulikov18})
+\begin{equation}\label{eq:sumupper}
+\size(\SUM_n) \le \frac{\size(\SUM_k)}{k-\lceil \log_2(k+1) \rceil} \cdot n + o(n) \, .
+\end{equation}
+This motivates the search for efficient circuits 
+for $\SUM_k$ for small values of~$k$. The bottom row 
+of~Table~\ref{table:sum} gives upper bounds that 
+we~were able to~find using the program 
+(the upper bounds for $n \le 7$ were found 
+by~Knuth~\cite{Knuth:2008:ACP:1377542}).
+The table shows that the first value where $s(n)$ is not
+optimal is $n=5$. The best upper bound for $\SUM_n$ given 
+by~\eqref{eq:sumupper} is $4.75n+o(n)$ for $n=7$. The upper 
+bound for $n=15$ is $53n/11+o(n)$ which is worse than the 
+previous upper bound. But if it~turned out that 
+$\size(\SUM_{15}) \le 52$, 
+it~would give a~better upper bound. 
+
+The found circuits for $\SUM_n$ for $n \le 15$ 
+does not allow to~improve the strongest known upper bound
+$\size(\SUM_n) \le 4.5n+o(n)$ due to~Demenkov et al.~\cite{DBLP:journals/ipl/DemenkovKKY10}. Below, 
+we~present several interesting observations on~the found circuits.
+
+\subsubsection{Best Known Upper Bound for the SUM Function}
+The optimal circuit of size~$11$ for $\SUM_5$ shown in~Figure~\ref{figure:sumfive}(c) can be~used to get an~upper bound $4.5n+o(n)$ for $\size(\SUM_n)$. To~do this,
+consider two consecutive $\SUM_3$ circuits shown in~Figure~\ref{figure:mdfa}(a).
+%
+\begin{figure}
+\begin{tikzpicture}
+\begin{scope}[scale=.7]
+%\draw[help lines] (0,0) grid (10,6);
+\draw (1,0) rectangle (3,2); \node at (2,1) {$\SUM_3$};
+\draw (5,0) rectangle (7,2); \node at (6,1) {$\SUM_3$};
+\foreach \n/\x/\y in {3/0/1, 2/1.5/3, 1/2.5/3, 4/5.5/3, 5/6.5/3}
+  \node[input] (\n) at (\x,\y) {$x_{\n}$};
+\foreach \n/\t/\x/\y in {a1/a_1/2/-1, b1/b_1/6/-1, b0/b_0/8/1}
+  \node[input] (\n) at (\x,\y) {$\t$};
+\draw[->] (3)--(1,1);
+\draw[->] (2)--(1.5,2);
+\draw[->] (1)--(2.5,2);
+\draw[->] (4)--(5.5,2);
+\draw[->] (5)--(6.5,2);
+\draw[->] (3,1)--(5,1);
+\draw[->] (7,1)--(b0);
+\draw[->] (2,0)--(a1);
+\draw[->] (6,0)--(b1);
+
+\node at (-1,1) {(a)};
+\end{scope}
+
+\begin{scope}[scale=.7,yshift=-60mm]
+%\draw[help lines] (0,0) grid (10,6);
+\draw (1,0) rectangle (7,2); \node at (4,1) {MDFA};
+\foreach \n/\x/\y in {3/0/1, 2/1.5/4, 1/2.5/4, 4/5.5/4, 5/6.5/4}
+  \node[input] (\n) at (\x,\y) {$x_{\n}$};
+\node[gate] (xor1) at (2.5,3) {$\oplus$};
+\node[gate] (xor2) at (6.5,3) {$\oplus$};
+\foreach \n/\t/\x/\y in {a1/a_1/2/-1, b1/{a_1 \oplus b_1}/6/-1, b0/b_0/8/1}
+  \node[input] (\n) at (\x,\y) {$\t$};
+\draw[->] (3)--(1,1);
+\draw[->] (2)--(1.5,2);
+\draw[->] (1) -- (xor1); \draw[->] (2) -- (xor1);
+\draw[->] (xor1) -- (2.5,2);
+\draw[->] (4)--(5.5,2);
+\draw[->] (5)-- (xor2); \draw[->] (xor2) -- (6.5,2); \draw[->] (4) -- (xor2);
+%\draw[->] (3,1)--(5,1);
+\draw[->] (7,1)--(b0);
+\draw[->] (2,0)--(a1);
+\draw[->] (6,0)--(b1);
+
+\node at (-1,1) {(b)};
+\end{scope}
+
+\begin{scope}[yscale=.8, xshift=80mm, yshift=-20mm]
+%\draw[help lines] (0,-3) grid (4,4);
+\draw[draw=none, rounded corners=0,fill=gray!20] (0,1.5)--(1,1.5)--(1,2.5)--(2,2.5)--(2,0.5)--(2.5,0.5)--(2.5,-0.5)--(3.5,-0.5)--
+(3.5,-2.5)--(0,-2.5)--(0,1.5);
+
+
+\foreach \n/\x/\y in {1/0/3, 2/1/3, 3/2/3, 4/2.5/1, 5/3.5/1}
+  \node[input] (x\n) at (\x, \y) {$x_{\n}$};
+\node[gate] (g1) at (0.5,2) {$\oplus$};
+\node[gate] (g2) at (1.5,2) {$\oplus$};
+\node[gate] (g3) at (0.5,1) {$\lor$};
+\node[gate] (g4) at (1.5,1) {$\oplus$};
+\node[gate, label=left:$a_1$] (g5) at (0.5,0) {$\oplus$};
+\node[gate] (g6) at (2,0) {$\oplus$};
+\node[gate] (g7) at (3,0) {$\oplus$};
+\node[gate] (g8) at (2,-1) {$>$};
+\node[gate, label=right:$b_0$] (g9) at (3,-1) {$\oplus$};
+\node[gate, label=right:$a_1 \oplus b_1$] (g10) at (2,-2) {$\oplus$};
+\node[gate] (g11) at (1.5,-3) {$>$};
+
+\foreach \f/\t in {x1/g1, x2/g1, x2/g2, x3/g2, g1/g3, g2/g3, g1/g4, g3/g5, g4/g5, x4/g6, g4/g6, x4/g7, x5/g7, g6/g8, g7/g8, g7/g9, g3/g10, g8/g10, g10/g11, g5/g11}
+  \draw[->] (\f) -- (\t);
+
+\path (x3) edge[->,bend left] (g4);
+\path (g4) edge[->,bend left=20] (g9);
+
+\node at (1.5,-4) {(c)};
+\end{scope}
+\end{tikzpicture}
+\caption{(a)~Two consecutive $\SUM_3$ blocks. (b)~The $\MDFA$ block. (c)~The highlighted part of the optimal circuit 
+for $\SUM_5$ computes $\MDFA$.}
+\label{figure:mdfa}
+\end{figure}
+%
+Its specification~is: $x_1+\dotsb+x_5=b_0+2(a_1+b_1)$, its size is~equal to~10. One can construct a~similar block, called MDFA (for modified double full adder), of size~8, whose specification is
+\[\MDFA(x_1 \oplus x_2, x_2, x_3, x_4, x_4 \oplus x_5)=(b_0, a_1, a_1 \oplus b_1) \, ,\]
+see Figure~\ref{figure:mdfa}(b).
+The fact that $\MDFA$ uses the encoding $(p, p \oplus q)$ for pairs of bits $(p,q)$, allows to use~it recursively 
+to~compute $\SUM_n$: first, compute $x_1 \oplus x_2, x_3 \oplus x_4, \dotsc, x_{n-1} \oplus x_n$ ($n/2$ gates); then,
+apply~$n/2$ $\MDFA$ blocks ($4n$ gates). 
+The $\MDFA$ block was constructed by~Demenkov et al.~\cite{DBLP:journals/ipl/DemenkovKKY10} in~a~semiautomatic 
+manner. And it turns out that $\MDFA$ is just a~subcircuit of the optimal circuit for $\SUM_5$! See Figure~\ref{figure:mdfa}(c).
+
+
+\subsubsection{Best Known Circuits for SUM with New Structure}
+
+For many upper bounds from the bottom row of~Table~\ref{eq:sumupper}, we found circuits with the following interesting structure: the first thing the circuit computes is $x_1 \oplus x_2 \oplus \dotsb \oplus x_n$; moreover the variables $x_2, \dotsc, x_n$ are used for this only. This is best illustrated by an~example~--- see Figure~\ref{}. 
+\todo[inline]{Nikita, could you draw such circuits for $n=3,4,5$?}
+
+\subsubsection{Optimal Circuits for Counting Modulo~4}
+The optimal circuit for $\SUM_5$ can be used to construct 
+an~optimal circuit of~size $2.5n+O(1)$ for $\MOD_4^n$ due 
+to~Stockmeyer~\cite{DBLP:journals/mst/Stockmeyer77}. 
+To~do this, note that 
+there is a~subcircuit (of the circuit at~Figure~\ref{figure:sumfive}(c)) of size~9 that computes the two least significant bits ($w_0,w_1$) of $x_1+\dotsb+x_5$ (one removes the gates $g_5, w_2$). To~compute $x_1+\dotsb+x_n \bmod 4$, one first applies $\frac n4$ such blocks and then computes the parity of~the resulting bits of weight~1. The total size is~$9 \cdot \frac n4 + \frac n4=2.5n$. Thus, 
+the circuit that Stockmeyer constructed in~1977 by~hand,
+nowadays can be~found automatically in~a~few seconds.
 
 
 \subsection{Modulo-3 Function}
-In~\cite{DBLP:conf/sat/KojevnikovKY09}, Kojevnikov et al. 
-presented circuits of size $3n+O(1)$ for $\MOD_n^{3,r}$ (for any~$r$). Later, 
+In~\cite{DBLP:conf/sat/KojevnikovKY09}, Kojevnikov et~al. 
+presented circuits of~size $3n+O(1)$ for $\MOD_n^{3,r}$ (for any~$r$). Later, 
 Knuth~\cite[solution to exercise~$480$]{Knuth:2015:ACP:2898950} analyzed their construction and proved an~upper 
 bound $3n-4$. Also, by~finding the exact values 
 for $\size(\MOD_n^{3,r})$ for all $3 \le n \le 5$ and all $0 \le r \le 2$, he~made the conjecture~\eqref{conjecture}.
-Using our program, we~found the corresponding circuits for all~$n$.
+Using our program, we~proved the conjectured upper bound for all~$n$.
 
 \begin{theorem}\label{theorem:mod3upper}
 For all $n \ge 3$ and all $r \in \{0,1,2\}$,
-\[\size(\MOD_n^{3,r}) \le 3n-5-[(n+r) \equiv r\bmod 3] \, \]
+\[\size(\MOD_n^{3,r}) \le 3n-5-[(n+r) \equiv r\bmod 3] \,. \]
 \end{theorem}
 
 To~prove Knuth's conjecture, one also needs to~prove a~lower bound on $\size(\MOD_n^{3,r})$. The currently strongest known lower bound for $\size(\MOD_n^{3,r})$ 
@@ -386,7 +561,7 @@ As~in~\cite{DBLP:conf/sat/KojevnikovKY09},
 we~construct the required circuit out of~constant size blocks. Schematically, the circuit looks as~follows.
 
 \begin{center}
-\begin{tikzpicture}[scale=.9]
+\begin{tikzpicture}[scale=.8]
 %\draw[help lines] (0,0) grid (16,6);
 
 \foreach \x in {0, 4, 9, 13}
@@ -424,41 +599,36 @@ $\size(\MID_3) \le ?$,
 $\size(\OUT_2^0) \le ?$,
 $\size(\OUT_1^1) \le ?$,
 $\size(\OUT_3^2) \le ?$.
+\todo[inline]{Nikita, fill in these question marks}
 The corresponding circuits are presented in the Appendix 
 by a~straightforward \texttt{Python} code that verifies their correctness.
 
-The following table shows how to~combine the blocks
+Table~\ref{table:parameters} shows how to~combine 
+the blocks
 to~get a~circuit computing~$\MOD_n^{3,r}$ of the required size. (Technically, it requires $n$~to~be at~least~$4$. For $n=3$, the corresponding circuits are easy to~construct.)
 
-    \begin{center}
-        \begin{tabular}{ cccc }
-        \toprule
-         & $n=3s$ & $n=3s+1$ & $n=3s+2$  \\ \hline
-        $r=0$ & \small{$\IN_4 + (s-2) \times \MID_3 + \OUT_2^0$} &
-              \small{$\IN_2 + (s-1) \times \MID_3 + \OUT_2^0$} &
-              \small{$\IN_3 + (s-1) \times \MID_3 + \OUT_2^0$} \\
-          & \small{$7 + \frac{n-6}{3} \cdot 9 + 5 = 3n-6$} &
-            \small{$2 + \frac{n-4}{3} \cdot 9 + 5 = 3n-5$} &
-            \small{$5 + \frac{n-5}{3} \cdot 9 + 5 = 3n-5$} \\ \hline
-
-        $r=1$ & \small{$\IN_2 + (s-1) \times \MID_3 + \OUT_1^1$} &
-              \small{$\IN_3 + (s-1) \times \MID_3 + \OUT_1^1$} &
-              \small{$\IN_4 + (s-1) \times \MID_3 + \OUT_1^1$} \\
-          & \small{$2 + \frac{n-3}{3} \cdot 9 + 2 = 3n-5$} &
-            \small{$5 + \frac{n-4}{3} \cdot 9 + 2 = 3n-5$} &
-            \small{$7 + \frac{n-5}{3} \cdot 9 + 2 = 3n-6$} \\ \hline
-
-        $r=2$ & \small{$\IN_3 + (s-2) \times \MID_3 + \OUT_3^2$} &
-              \small{$\IN_4 + (s-2) \times \MID_3 + \OUT_3^2$} &
-              \small{$\IN_2 + (s-1) \times \MID_3 + \OUT_3^2$} \\
-          & \small{$5 + \frac{n-6}{3} \cdot 9 + 8 = 3n-5$} &
-            \small{$7 + \frac{n-7}{3} \cdot 9 + 8 = 3n-6$} &
-            \small{$2 + \frac{n-5}{3} \cdot 9 + 8 = 3n-5$} \\ \bottomrule
-        \end{tabular}
-    \end{center}
-
-\todo[inline]{Nikita, fix and complete the table}
-
+\begin{table}
+\begin{center}
+\begin{tabular}{cccc}
+\toprule
+& $n=3t$ & $n=3t+1$ & $n=3t+2$\\ 
+\hline
+$r=0$
+& $(4, t-2, 2)$, $(?, ?)$, $3n-6$
+& $(2, t-1, 2)$, $(?, ?)$, $3n-5$
+& $(3, t-1, 2)$, $(?, ?)$, $3n-5$
+\\
+\bottomrule
+\end{tabular}
+\end{center}
+\caption{Choosing parameters $k, m, l$ depending on $n \mod 3$ and~$r$. The circuit is composed out of~blocks 
+as~follows: $\IN_k + m \times \MID_3 + \OUT_r^l$. For each
+pair $(n \mod 3, r)$ we show three things: the triple
+$(m, k, l)$; the sizes of~two blocks: $\size(\IN_k)$ and $\size(\OUT_r^l)$; the size of~the resulting circuit
+computed as $s=\size(\IN_k)+9m+\size(\OUT_r^l)$.}
+\label{table:parameters}
+\end{table}
+\todo[inline]{Nikita, complete the table}
 \end{proof}
 
 \subsection{Threshold-2 Function}
@@ -471,7 +641,7 @@ to~get a~circuit computing~$\MOD_n^{3,r}$ of the required size. (Technically, it
 \bibliography{circuits}
 
 \appendix
-\section{Blocks for $\MOD_n^{3,r}$}
-The following code justifies the existence of circuits needed in the proof of Theorem~\ref{theorem:mod3upper}.
+\section{Blocks for the Modulo~3 Function}
+The following code justifies the existence of~circuits needed in the proof of Theorem~\ref{theorem:mod3upper}.
 \inputminted{python}{mod3_check.py}
 
