--- a/paper/main.tex
+++ b/paper/main.tex
@@ -206,55 +206,12 @@ Using this circuit, one can build a~circuit of size $5+11+2+1=19$ for $\SUM_7$:
 %
 Plugging $\size(\SUM_7) \le 19$ into~\eqref{eq:master}, gives an~upper bound $\size(\SUM_n) \le 4.75n$.
 
-Interestingly, the same $\SUM_5$ circuit can be used to~get a~$4.5n$ upper bound! For this, consider two consecutive $\SUM_3$ circuits.
-%
-\begin{mypic}
-\begin{scope}[scale=.7]
-%\draw[help lines] (0,0) grid (10,6);
-\draw (1,0) rectangle (3,2); \node at (2,1) {$\SUM_3$};
-\draw (5,0) rectangle (7,2); \node at (6,1) {$\SUM_3$};
-\foreach \n/\x/\y in {3/0/1, 2/1.5/3, 1/2.5/3, 4/5.5/3, 5/6.5/3}
-  \node[input] (\n) at (\x,\y) {$x_{\n}$};
-\foreach \n/\t/\x/\y in {a1/a_1/2/-1, b1/b_1/6/-1, b0/b_0/8/1}
-  \node[input] (\n) at (\x,\y) {$\t$};
-\draw[->] (3)--(1,1);
-\draw[->] (2)--(1.5,2);
-\draw[->] (1)--(2.5,2);
-\draw[->] (4)--(5.5,2);
-\draw[->] (5)--(6.5,2);
-\draw[->] (3,1)--(5,1);
-\draw[->] (7,1)--(b0);
-\draw[->] (2,0)--(a1);
-\draw[->] (6,0)--(b1);
-\end{scope}
-\end{mypic}
-%
-Its specification~is: $x_1+\dotsb+x_5=b_0+2(a_1+b_1)$. Its size 
-is~equal to~10.
+Interestingly, the same $\SUM_5$ circuit can be used to~get a~$4.5n$ upper bound! 
 
-It~turns out that one can construct a~similar block, called MDFA (for modified double full adder), of size~8:
-\begin{mypic}
-\begin{scope}[scale=.7]
-%\draw[help lines] (0,0) grid (10,6);
-\draw (1,0) rectangle (7,2); \node at (4,1) {MDFA};
-\foreach \n/\x/\y in {3/0/1, 2/1.5/4, 1/2.5/4, 4/5.5/4, 5/6.5/4}
-  \node[input] (\n) at (\x,\y) {$x_{\n}$};
-\node[gate] (xor1) at (2.5,3) {$\oplus$};
-\node[gate] (xor2) at (6.5,3) {$\oplus$};
-\foreach \n/\t/\x/\y in {a1/a_1/2/-1, b1/{a_1 \oplus b_1}/6/-1, b0/b_0/8/1}
-  \node[input] (\n) at (\x,\y) {$\t$};
-\draw[->] (3)--(1,1);
-\draw[->] (2)--(1.5,2);
-\draw[->] (1) -- (xor1); \draw[->] (2) -- (xor1);
-\draw[->] (xor1) -- (2.5,2);
-\draw[->] (4)--(5.5,2);
-\draw[->] (5)-- (xor2); \draw[->] (xor2) -- (6.5,2); \draw[->] (4) -- (xor2);
-%\draw[->] (3,1)--(5,1);
-\draw[->] (7,1)--(b0);
-\draw[->] (2,0)--(a1);
-\draw[->] (6,0)--(b1);
-\end{scope}
-\end{mypic}
+For this, 
+%
+
+
 Using this block, one can compute $\SUM_n$ by a~circuit of size $4.5n$ as~follows:
 
 \begin{mypic}
@@ -288,39 +245,9 @@ Using this block, one can compute $\SUM_n$ by a~circuit of size $4.5n$ as~follow
 
 Finally, the block MDFA is contained in the circuit of size~11 for $\SUM_5$! 
 
-\begin{mypic}
-\begin{scope}[yscale=.8]
-%\draw[help lines] (0,-3) grid (4,4);
-\draw[draw=none, rounded corners=0,fill=gray!20] (0,1.5)--(1,1.5)--(1,2.5)--(2,2.5)--(2,0.5)--(2.5,0.5)--(2.5,-0.5)--(3.5,-0.5)--
-(3.5,-2.5)--(0,-2.5)--(0,1.5);
 
 
-\foreach \n/\x/\y in {1/0/3, 2/1/3, 3/2/3, 4/2.5/1, 5/3.5/1}
-  \node[input] (x\n) at (\x, \y) {$x_{\n}$};
-\node[gate] (g1) at (0.5,2) {$\oplus$};
-\node[gate] (g2) at (1.5,2) {$\oplus$};
-\node[gate] (g3) at (0.5,1) {$\lor$};
-\node[gate] (g4) at (1.5,1) {$\oplus$};
-\node[gate, label=left:$a_1$] (g5) at (0.5,0) {$\oplus$};
-\node[gate] (g6) at (2,0) {$\oplus$};
-\node[gate] (g7) at (3,0) {$\oplus$};
-\node[gate] (g8) at (2,-1) {$>$};
-\node[gate, label=right:$b_0$] (g9) at (3,-1) {$\oplus$};
-\node[gate, label=right:$a_1 \oplus b_1$] (g10) at (2,-2) {$\oplus$};
-\node[gate] (g11) at (1.5,-3) {$>$};
 
-\foreach \f/\t in {x1/g1, x2/g1, x2/g2, x3/g2, g1/g3, g2/g3, g1/g4, g3/g5, g4/g5, x4/g6, g4/g6, x4/g7, x5/g7, g6/g8, g7/g8, g7/g9, g3/g10, g8/g10, g10/g11, g5/g11}
-  \draw[->] (\f) -- (\t);
-
-\path (x3) edge[->,bend left] (g4);
-\path (g4) edge[->,bend left=20] (g9);
-
-\end{scope}
-\end{mypic}
-
-Also, the optimal circuit for $\SUM_5$ can be used to construct 
-an~optimal circuit of size $2.5n+O(1)$ for $\MOD_4$. For this, note that 
-there is a~subcircuit of size~9 that computes the two least significant bits ($w_0,w_1$) of $x_1+\dotsb+x_5$ (one removes the gate $w_2$ and one of its predecessors). Thus, to compute $x_1+\dotsb+x_n \bmod 4$, one first applies $\frac n4$ such blocks and then computes the parity of the resulting bits of weight~1. The total size is $9 \cdot \frac n4 + \frac n4=2.5n$.
 
 
 
