--- a/paper/body.tex
+++ b/paper/body.tex
@@ -435,6 +435,7 @@ The optimal circuit of size~$11$ for $\SUM_5$ shown in~Figure~\ref{figure:sumfiv
 consider two consecutive $\SUM_3$ circuits shown in~Figure~\ref{figure:mdfa}(a).
 %
 \begin{figure}
+\begin{center}
 \begin{tikzpicture}
 \begin{scope}[scale=.7]
 %\draw[help lines] (0,0) grid (10,6);
@@ -509,6 +510,7 @@ consider two consecutive $\SUM_3$ circuits shown in~Figure~\ref{figure:mdfa}(a).
 \node at (1.5,-4) {(c)};
 \end{scope}
 \end{tikzpicture}
+\end{center}
 \caption{(a)~Two consecutive $\SUM_3$ blocks. (b)~The $\MDFA$ block. (c)~The highlighted part of the optimal circuit 
 for $\SUM_5$ computes $\MDFA$.}
 \label{figure:mdfa}
