--- a/paper/body.tex
+++ b/paper/body.tex
@@ -601,9 +601,9 @@ $\size(\MID_3) \le 9$,
 $\size(\OUT_2^0) \le 5$,
 $\size(\OUT_1^1) \le 2$,
 $\size(\OUT_3^2) \le 8$.
-\todo[inline]{Nikita, fill in these question marks}
 The corresponding circuits are presented in the Appendix
-by a~straightforward \texttt{Python} code that verifies their correctness.
+by a~straightforward \texttt{Python} code that verifies their correctness. (The presented code proves the mentioned upper bounds by~providing explicit circuits. We have also verified that no~smaller circuits exists meaning that the
+inequalities above are in fact equalities.)
 
 Table~\ref{table:parameters} shows how to~combine
 the blocks
