--- a/paper/body.tex
+++ b/paper/body.tex
@@ -528,7 +528,7 @@ manner. And it turns out that $\MDFA$ is just a~subcircuit of the optimal circui
 
 \subsubsection{Best Known Circuits for SUM with New Structure}
 
-For many upper bounds from the bottom row of~Table~\ref{eq:sumupper}, we found circuits with the following interesting structure: the first thing the circuit computes is $x_1 \oplus x_2 \oplus \dotsb \oplus x_n$; moreover the variables $x_2, \dotsc, x_n$ are used for this only. This is best illustrated by an~example~--- see Figure~\ref{}. 
+For many upper bounds from the bottom row of~Table~\ref{table:sum}, we found circuits with the following interesting structure: the first thing the circuit computes is $x_1 \oplus x_2 \oplus \dotsb \oplus x_n$; moreover the variables $x_2, \dotsc, x_n$ are used for this only. This is best illustrated by an~example~--- see Figure~\ref{}. 
 \todo[inline]{Nikita, could you draw such circuits for $n=3,4,5$?}
 
 \subsubsection{Optimal Circuits for Counting Modulo~4}
