--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -61,12 +61,10 @@
    "source": [
     "#@title Improve circuit\n",
     "\n",
-    "start = timer()\n",
-    "run(add_sum5_suboptimal, 5, subcircuit_size=5, connected=True)\n",
-    "end = timer()\n",
-    "print('Time (sec):', end - start)\n",
-    "c = Circuit(fn='circuit_improved').draw('circuit_improved')\n",
-    "Image('circuits/.images/circuit_improved.png')\n"
+    "improved_circuit = run_improve_circuit(add_sum5_suboptimal, 5, subcircuit_size=5, connected=True)\n",
+    "print(improved_circuit)\n",
+    "improved_circuit.draw('sum5')\n",
+    "Image('circuits/.images/sum5.png')\n"
    ],
    "execution_count": null,
    "outputs": []
